--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h2>Placeholder</h2>
+    <h2>Mitchell Brusseau</h2>
 </body>
 </html>
